--- a/src/components/app/App.module.css
+++ b/src/components/app/App.module.css
@@ -1,4 +1,7 @@
 .container {
   composes: container from "../../index.css";
   padding: 40px 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 40px;
 }
