--- a/src/components/selectable-parts/selectable-parts.module.css
+++ b/src/components/selectable-parts/selectable-parts.module.css
@@ -3,7 +3,8 @@
   flex-wrap: wrap;
   padding-left: 16px;
   margin-top: 24px;
-  row-gap: 24px;
+  margin-bottom: 40px;
+  row-gap: 32px;
   justify-content: space-between;
 }
 
@@ -23,4 +24,8 @@
   display: flex;
   align-items: center;
   gap: 9px;
+}
+
+.partsName {
+  display: block;
 }
