--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -9,6 +9,12 @@
     padding: 16px 8px 16px 0;
 }
 
+.constructor__menu-list {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
 .constructor__total {
     margin-top: 40px;
     display: flex;
