refactored to redux

--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -23,6 +23,11 @@
     gap: 40px;
 }
 
+.constructor__total span {
+    display: flex;
+    gap: 8px;
+}
+
 .constructor__total svg {
     width: 36px;
     height: 36px;
