--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -33,3 +33,8 @@
     height: 36px;
     padding-top: 1px;
 }
+
+.active_drop-target {
+    border: solid 3px rgba(55, 2, 137, .9);
+    border-radius: 33px;
+}
