--- a/src/components/burger-constructor/bun/bun.module.css
+++ b/src/components/burger-constructor/bun/bun.module.css
@@ -1,4 +1,3 @@
 .active_drop-target {
-    border: solid 3px rgba(55, 2, 137, .9);
-    border-radius: 33px;
+    box-shadow: 0 0 50px aqua inset;
 }
