--- a/src/components/burger-constructor/burger-constructor-menu/burger-constructor-menu.module.css
+++ b/src/components/burger-constructor/burger-constructor-menu/burger-constructor-menu.module.css
@@ -3,8 +3,12 @@
     flex-direction: column;
     gap: 16px;
     width: 100%;
-    max-height: 40vh;
+    max-height: 46vh;
     min-height: 90px;
     overflow-y: scroll;
-    padding: 16px 8px 16px 0;
+}
+
+
+.dragging {
+    box-shadow: 0 0 50px aqua inset;
 }
