--- a/src/components/modal/ingredient-details/ingredient-details.module.css
+++ b/src/components/modal/ingredient-details/ingredient-details.module.css
@@ -1,28 +1,37 @@
-.ingredint-details__img {
-  display: block;
-  max-width: 480px;
-  margin: 0 auto;
+.ingredient-details {
+    margin: 0 auto;
+    max-width: 640px;
 }
+
+.ingredient-details__img {
+    display: block;
+    max-width: 480px;
+    margin: 0 auto;
+}
+
 .ingredient-details__title {
-  display: block;
-  margin: 0 auto;
-  margin-top: 16px;
-  text-align: center;
+    display: block;
+    margin: 16px auto 0 auto;
+    text-align: center;
 }
 
 .ingredient-details__nutrition-value {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
+    margin: 32px auto 0 auto;
+    max-width: 516px;
 }
+
 .ingredient-details__nutrition-value li {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-family: "JetBrains Mono";
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  color: #8585ad;
-  row-gap: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: "JetBrains Mono", sans-serif;
+    font-style: normal;
+    max-width: 120px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #8585ad;
+    row-gap: 8px;
 }
