--- a/src/components/app-header/app-header.module.css
+++ b/src/components/app-header/app-header.module.css
@@ -45,7 +45,7 @@
 }
 
 .nav__list-span {
-    font-family: "JetBrains Mono";
+    font-family: "JetBrains Mono", sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
